# but_velodyne_cnn

./: README.md
data/: Readme.txt
ground-annotator/src/: CMakeLists.txt  annotationarea.cpp  annotationarea.h  labeling.h  main.cpp  pcl_visualizer.pro  pclviewer.cpp  pclviewer.h  pclviewer.ui  ringfiller.cpp  ringfiller.h
networks/L03-deconv-inc/: net_train_val.prototxt
networks/L03-deconv-inc-multich/: net_train_val.prototxt
networks/L03-deconv-inc-multich/run02-fake-ann-only/: net_solver.prototxt  train.files
networks/L03-deconv-inc-multich/run03-fake-pretrained/: net_train_val.prototxt
networks/L03-deconv-inc/run01-true-ann-only/: net_snapshot_iter_150000.caffemodel  test.files
networks/L03-deconv-inc/run02-fake-ann-only/: net_snapshot_iter_150000.caffemodel
networks/L03-deconv-inc/run03-fake-pretrained/: net_snapshot_iter_150000.caffemodel  net_train_val.prototxt
networks/L04-conv-inc/: net_train_val.prototxt
networks/L04-conv-inc/run01-true-ann-only/: net_snapshot_iter_150000.caffemodel  net_train_val.prototxt
networks/L04-conv-inc/run02-fake-ann-only/: net_snapshot_iter_150000.caffemodel
networks/L04-conv-inc/run03-fake-pretrained/: net_snapshot_iter_150000.caffemodel  train.files
networks/L05-deconv/: net_train_val.prototxt
networks/L05-deconv/run01-true-ann-only/: net_snapshot_iter_150000.caffemodel  net_solver.prototxt
networks/L05-deconv/run02-fake-ann-only/: net_snapshot_iter_150000.caffemodel  net_train_val.prototxt
networks/L05-deconv/run03-fake-pretrained/: net_snapshot_iter_150000.caffemodel
(+252 files in other folders)
